2004-09-08  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2004-08-27  Xavier Ordoquy  <xordoquy@linovia.com>

	* configure.in:
	searches for the gtk.def file

	* python/Makefile.am:
	includes the gtk.def file while generating the wrapper.

	* python/planner.defs:
	regenerated the PlannerWindow wrapper.

	* python/planner-types.defs:
	* python/planner.override:
	reflect the move to GtkUIManager

	* python/python-demo.py:
	demo to show a bit python scripting abilities.

2004-08-27  Xavier Ordoquy  <xordoquy@linovia.com>

	* data/ui/sql-plugin.ui:
	open/save are now in the import/export placeholders.

2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-08-17  Richard Hult  <richard@imendio.com>

	* src/planner-print-dialog.c: (ensure_dir), (get_config_filename),
	(planner_print_dialog_load_config),
	(planner_print_dialog_save_config), (print_dialog_create_page):
	Fix indentation, factor out printing config file location code,
	handle not being able to find it. Remove libgnome stuff.
	
	* src/planner-table-print-sheet.c: (table_print_sheet_print_cell),
	(table_print_sheet_print_page), (table_print_sheet_foreach_row):
	Handle printing empty resource and task names. Fix indentation.

2004-08-15  Richard Hult  <richard@imendio.com>

	* configure.in: Remove unused dependencies.

	* src/planner-eds-plugin.c: Remove libgnome includes.

	* src/eel-canvas-rect.c: (eel_canvas_rect_init),
	(eel_canvas_rect_finalize), (eel_canvas_rect_update),
	(eel_canvas_rect_realize), (eel_canvas_rect_unrealize): Get rid of
	libgnome includes.

2004-08-11  Richard Hult  <richard@imendio.com>

	* src/planner-window.c (window_about_cb): Change
	translator_credits to translator-credits on request from the i18n
	guys. Update the planner link.

2004-08-12  Alvaro del Castillo  <acs@barrapunto.com>
	
	* libplanner-1.pc.in: removed hard coded Postgres flags

2004-08-12  Alvaro del Castillo  <acs@barrapunto.com>
	