@@ -1,3 +1,8 @@
+2004-09-10  Richard Hult  <richard@imendio.com>
+
+	* src/planner-gantt-print.c: (planner_gantt_print_do): Print the
+	timeline. Based on patch from satyadadi@hotmail.com.
+
 2004-09-08  Abel Cheung  <maddog@linux.org.hk>
 
 	* configure.in: Added "zh_TW" to ALL_LINGUAS.
